[project]
name = "pinarkive-sdk-py"
version = "3.0.1"
description = "Python SDK for PinArkive API v3 – minimal client (upload, pin, remove, users/me, uploads, tokens, status, allocations). See https://pinarkive.com/docs.php"
authors = [
  {name = "PinArkive"},
  {name = "Joel_da"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests>=2.31.0"]

[project.urls]
Homepage = "https://github.com/pinarkive/pinarkive-sdk-py"
Repository = "https://github.com/pinarkive/pinarkive-sdk-py.git"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []